fixed overflow and font family

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,6 +29,17 @@ $biggestFont: 30px;
 *{
     padding: 0px;
     margin: 0px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Overpass', sans-serif;
+}
+
+
+
+html,body{
+    overflow-x: hidden;
 }
 
 body{
@@ -36,7 +47,7 @@ body{
 
 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    overflow-x: hidden;
+    
     .hero-img-container{
          position: relative;
         &::before{
@@ -129,6 +140,14 @@ body{
                                 }
 
                                 &.visible > .dropdown-arrow{
+                                    animation: rotateArrow 0.2s ease-in-out forwards;
+                                }
+
+                                &.visibl > .menu-box{
+                                    display: inline-block;
+                                }
+
+                                &.visibl > .dropdown-arrow{
                                     animation: rotateArrow 0.2s ease-in-out forwards;
                                 }
 
